<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_300"
    tools:context=".ui.auth.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_xlarge">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_green_section"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_top_height"
                android:background="@drawable/dialog_bg_signup"
                android:paddingBottom="@dimen/spacing_xxxxlarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/title_text"
                    style="@style/TextAppearance.Montserrat.Title.White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:letterSpacing="-0.02"
                    android:text="@string/register_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"/>

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:contentDescription="@string/desc_icon_back"
                    android:scaleX="-1"
                    android:src="@drawable/img_signup_exit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white"
                    android:layout_marginStart="@dimen/spacing_medium"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- NOMBRE -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxxxlarge"
                app:hintTextColor="#000000"
                app:startIconDrawable="@drawable/ic_user_green"
                app:boxStrokeColor="@color/green_icon"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="2dp"
            app:startIconTint="@color/green_icon"
            app:layout_constraintTop_toBottomOf="@+id/top_green_section" android:textColorHint="#222222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/register_name_hint"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TELÉFONO -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            app:hintTextColor="#000000"
            android:textColorHint="#222222"
            app:startIconDrawable="@drawable/ic_phone_green"
            app:boxStrokeColor="@color/green_icon"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/green_icon"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:hint="@string/register_phone_hint"
            android:autofillHints="phone"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CONTRASEÑA -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textColorHint="#222222"
        app:hintTextColor="#000000"
        app:startIconDrawable="@drawable/ic_lock_green"
        app:boxStrokeColor="@color/green_icon"
    app:boxStrokeWidth="1dp"
    app:boxStrokeWidthFocused="2dp"
    app:startIconTint="@color/green_icon"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/green_icon"
    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.85">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_height"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#000000" />
</com.google.android.material.textfield.TextInputLayout>

    <!-- CONFIRMAR CONTRASEÑA -->
<com.google.android.material.textfield.TextInputLayout
android:id="@+id/text_input_layout_confirm_password"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/spacing_medium"
app:hintTextColor="#000000" android:textColorHint="#222222"
app:startIconDrawable="@drawable/ic_lock_green"
app:boxStrokeColor="@color/green_icon"
    app:boxStrokeWidth="1dp"
    app:boxStrokeWidthFocused="2dp"
    app:startIconTint="@color/green_icon"
    app:passwordToggleEnabled="true"
    app:passwordToggleTint="@color/green_icon"
    app:layout_constraintTop_toBottomOf="@+id/input_password_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintWidth_percent="0.85">

<com.google.android.material.textfield.TextInputEditText
android:id="@+id/input_confirm_password"
android:layout_width="match_parent"
android:layout_height="@dimen/input_height"
android:hint="@string/register_confirm_password_hint"
android:inputType="textPassword"
android:textColor="@color/black"
android:textColorHint="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

<androidx.constraintlayout.widget.ConstraintLayout
android:id="@+id/terms_container"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/spacing_medium"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirm_password"
app:layout_constraintWidth_percent="0.85"/>

<com.google.android.material.button.MaterialButton
android:id="@+id/button_register"
style="@style/Widget.App.Button.Primary"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/margin_button_bottom"
android:text="@string/register_button"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/terms_container"
app:layout_constraintWidth_percent="0.85" />

<TextView
android:id="@+id/text_login_link"
style="@style/TextAppearance.App.Link"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/spacing_small"
android:text="@string/login_si_prompt"
android:textColor="@color/teal_dark"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/button_register"
app:layout_constraintBottom_toBottomOf="parent"
android:layout_marginBottom="@dimen/spacing_medium"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>