<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".ui.auth.LoginActivity">

    <androidx.core.widget.NestedScrollView
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitle_control_app"
                app:layout_constraintWidth_percent="0.85"
                app:startIconDrawable="@drawable/ic_user_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:autofillHints="phone"
                    android:inputType="phone"
                    android:importantForAccessibility="yes"
                    android:paddingStart="@dimen/padding_input_start"
...
                android:importantForAccessibility="no"
                app:layout_constraintEnd_toEndOf="@id/input_layout_password"
                app:layout_constraintStart_toStartOf="@id/input_layout_password"
                app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

            <TextView
                android:id="@+id/forgot_password_text"
                style="@style/TextAppearance.App.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/login_forgot_password"
                android:importantForAccessibility="yes"
                app:layout_constraintEnd_toEndOf="@id/input_layout_password"
                app:layout_constraintTop_toBottomOf="@id/text_error_message" />

            <TextView
                android:id="@+id/create_account_text"
                style="@style/TextAppearance.App.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:importantForAccessibility="yes"
                android:paddingBottom="16dp"
...
            android:src="@drawable/img_login_dialog_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.App.Button.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@string/common_access"
...
