<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_reset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_300"
    tools:context=".ui.auth.ResetPasswordActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_xlarge">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/top_green_section"
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_top_height"
                android:background="@drawable/dialog_bg_reset"
                android:paddingBottom="@dimen/spacing_xxxxlarge"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:contentDescription="@string/desc_icon_back"
                    android:rotation="-180"
                    android:src="@drawable/img_signup_exit"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@android:color/white" />

                <TextView
                    android:id="@+id/title_text"
                    style="@style/TextAppearance.Montserrat.Title.White"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:gravity="start"
                    android:letterSpacing="-0.02"
                    android:text="@string/reset_password_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_new_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxxxlarge"
                app:boxStrokeColor="@color/green_icon"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="#000000"
                android:textColorHint="#222222"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/top_green_section"
                app:layout_constraintWidth_percent="0.85"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green_icon"
                app:startIconDrawable="@drawable/ic_lock_green"
                app:startIconTint="@color/green_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:hint="@string/reset_password_new_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_new_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                app:boxStrokeColor="@color/green_icon"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="#000000"
                android:textColorHint="#222222"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_new_password_layout"
                app:layout_constraintWidth_percent="0.85"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/green_icon"
                app:startIconDrawable="@drawable/ic_lock_green"
                app:startIconTint="@color/green_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:hint="@string/reset_password_confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_set_new_password"
                style="@style/Widget.App.Button.Primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xxxxlarge"
                android:text="@string/reset_password_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_confirm_new_password_layout"
                app:layout_constraintWidth_percent="0.85" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>