<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_forgot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_300"
    tools:context=".ui.auth.ForgotPasswordActivity">

    <androidx.core.widget.NestedScrollView
...
    android:src="@drawable/img_forgot_line"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/button_reset_password"
    style="@style/Widget.App.Button.Primary"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_medium"
    android:layout_marginBottom="@dimen/spacing_medium"
    android:visibility="gone"
...
